package muck.core.character;

public interface INPCBehaviour {
    void Update(); // To be called once per pre-determine fixed timestep
}
